Fixed invisible Juniper output by changing text color

--- a/content/shared/shared.less
+++ b/content/shared/shared.less
@@ -86,6 +86,7 @@ x-step code {
   overflow: hidden;
   font-size: 15px;
   .CodeMirror { padding: .6em 1em; }
+  pre {color: #555}
 }
 
 .juniper-output {
